Cambio de Nombres a entidades, propiedades y Swagger
